--- a/Capstone_Project.ipynb
+++ b/Capstone_Project.ipynb
@@ -2730,6 +2730,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://rawgit.com/malodhi/Coursera_Capstone/Branch_1/final_project_map_clusters.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
