Client ID removed.

--- a/Capstone_Project.ipynb
+++ b/Capstone_Project.ipynb
@@ -236,7 +236,7 @@
     "### Describing Foursquare Credentials:\n",
     "\n",
     "CLIENT_ID = 'QVVZFBOIM23WXTHS0QNXXXQRKDR2Y0RZ1IVUKQ5SXP013CWI'     # your Foursquare ID\n",
-    "CLIENT_SECRET = 'AQNG4XNAKC025K3OASFTQR4WVQGP4LGFRLJ5FPNC4W1E0VEK' # your Foursquare Secret Key\n",
+    "CLIENT_SECRET = '***************' # your Foursquare Secret Key\n",
     "VERSION = '20181018'\n",
     "LIMIT = 100\n",
     "RADIUS = 1000"
